# template.py

./: .pre-commit-config.yaml  .vale.ini  CHANGELOG.md  GIT-SETUP.md  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: poetry.yml  pre-commit.yml  publish.yml  pytest.yml  scripts.yml  stale.yml
styles/config/vocabularies/Cookiecutter/: accept.txt
styles/config/vocabularies/VSCode/: accept.txt
template_py/: actions.py  configuration.py  git.py  initialise.py  project_name.py
template_py_test/: actions_test.py  configuration_test.py  conftest.py  initialise_test.py  licence_test.py  project_name_test.py
template_py_test/actions_test_fixtures/: convert_file_devcontainer_json.yaml  convert_file_github_workflows_poetry.yaml  convert_file_pyproject_toml.yaml
templatise/: __init__.py  actions.py  configuration.py  initialise.py  licence.py  licenses.json  project_name.py
templatise_test/: actions_test.py  configuration_test.py  conftest.py  initialise_test.py  licence_test.py  project_name_test.py
templatise_test/actions_test_fixtures/: convert_file_devcontainer_json.yaml  convert_file_github_workflows_poetry.yaml  convert_file_pyproject_toml.yaml  convert_pyproject_toml.yaml
templatise_test/licence_test_fixtures/: licence_0BSD.yaml  licence_Apache-2.0.yaml  licence_BSD-1-Clause.yaml  licence_GPL-3.0.yaml  licence_MIT.yaml  licence_MPL-2.0.yaml
test/template_test/: __init__.py
