[tool.poetry]
name = "template-py"
version = "0.1.0"
description = "You can use template.py to create a new GitHub repository."
authors = ["Alex Brandt <alunduil@gmail.com>"]
license = "unlicense"
readme = "README.md"
packages = [{include = "template", from = "src"}]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.vulture]
paths = ["src", "test"]
