[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.isort]
profile = "black"

[tool.poetry]
authors = ["Alex Brandt <alunduil@gmail.com>"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: The Unlicense (Unlicense)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development",
  "Topic :: System :: Installation/Setup",
  "Typing :: Typed"
]
description = "You can use template.py to create a new GitHub repository."
keywords = ["python", "template", "vscode", "devcontainers"]
license = "unlicense"
name = "templatise"
readme = "README.md"
repository = "https://github.com/alunduil/template.py"
version = "1.0.0"

[tool.poetry.dependencies]
beautifulsoup4 = "^4.11.1"
click = "^8.1.3"
click-log = "^0.4.0"
python = "^3.7.2"
requests = "^2.28.1"
retry = "^0.9.2"
toml = "^0.10.2"
toml-sort = "^0.22.1"

[tool.poetry.group.dev.dependencies]
coveralls = "^3.3.1"
hypothesis = "^6.57.1"
pre-commit = "^2.20.0"
pylint = "^2.15.5"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-golden = "^0.2.2"
pytest-xdist = {extras = ["psutil"], version = "^3.1.0"}

[tool.poetry.scripts]
initialise = 'templatise.initialise:main'

[tool.pytest.ini_options]
addopts = "--doctest-modules --cov=templatise --cov-report=term-missing -n logical"
enable_assertion_pass_hook = true
testpaths = ["templatise_test"]

[tool.vulture]
paths = ["templatise", "templatise_test"]
